--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,7 +10,7 @@
   <div id="root"></div>
   <script
   type="text/javascript"
-  src="//dapi.kakao.com/v2/maps/sdk.js?appkey=id&libraries=services,clusterer"
+  src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6051d1facc2b9aa4699331e8b10d39cd&libraries=services,clusterer"
 ></script>
 </body>
 </html>
