--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=xzcK82uy9L4F0tX5C7RmC6Hpc9dpxvDp2ETeW89t"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </head>
 <body>
   <div id="root"></div>
