--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link rel="apple-touch-icon" sizes="180x180" href="path/to/apple-touch-icon.png">
   <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=xzcK82uy9L4F0tX5C7RmC6Hpc9dpxvDp2ETeW89t"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
 
 </head>
 <body>
