--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <link rel="apple-touch-icon" sizes="180x180" href="path/to/apple-touch-icon.png">
   <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=xzcK82uy9L4F0tX5C7RmC6Hpc9dpxvDp2ETeW89t"></script>
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
 <body>
   <div id="root"></div>
